finished color study

--- a/.env
+++ b/.env
@@ -1,12 +1,13 @@
 VITE_BASE_PATH="/study/"
 VITE_FIREBASE_CONFIG='
 {
-  apiKey: "AIzaSyAm9QtUgx1lYPDeE0vKLN-lK17WfUGVkLo",
-  authDomain: "revisit-utah.firebaseapp.com",
-  projectId: "revisit-utah",
-  storageBucket: "revisit-utah.appspot.com",
-  messagingSenderId: "811568460432",
-  appId: "1:811568460432:web:995f6b4f1fc8042b5dde15"
+  apiKey: "AIzaSyD2G17d_r8Wra1ctHlvHdisYcstlnJyB_U",
+  authDomain: "revisit-2a2f2.firebaseapp.com",
+  projectId: "revisit-2a2f2",
+  storageBucket: "revisit-2a2f2.appspot.com",
+  messagingSenderId: "295990499487",
+  appId: "1:295990499487:web:6bba9e625a6940675f2aaa",
+  measurementId: "G-S8QLYBEDWV"
 }
 '
 VITE_STORAGE_ENGINE="firebase" # "firebase" or "localStorage" or your own custom storage engine
